tests/checker/ok/list_construction.can
Unit => Program {
    List(1 * 2 * 3)
        -> Length
        -> Print
}
